--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2"
+        "php": ">=5.3.2",
+        "jms/job-queue-bundle": "dev-master"
     },
     "autoload": {
         "psr-0": { "Qwad\\Bundle\\AsyncEventDispatcherBundle\\": "" }
