--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
+        "symfony/framework-bundle": "~2.1",
         "jms/job-queue-bundle": "dev-master"
     },
     "autoload": {
